# galaxy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  TODO
src/: CMakeLists.txt
src/component/: CMakeLists.txt  background.cpp  background.h  empty_data.h  list.h  name.h  transform.cpp  transform.h
src/component/utils/: CMakeLists.txt  empty_data.cpp  for_each.h
src/components/: background.cpp  background.h  empty_data.h  for_each.h  list.h  parse.h  transform.cpp  transform.h
src/components/utils/: empty_data.cpp  empty_data.h  for_each.h
src/config/: CMakeLists.txt  load.cpp  load.h  parse.h  parse_error.h
src/config/ast/: CMakeLists.txt  component.cpp  component.h  entity.cpp  entity.h  scene.cpp  scene.h
src/config/yaml/: vec3.h
src/game/: CMakeLists.txt  component.cpp  component.h  entity.cpp  entity.h  scene.cpp  scene.h
src/gl/: CMakeLists.txt  context.cpp  context.h  environment.cpp  environment.h  glfw_error.h
src/load/: load.cpp  load.h  parse.h
src/load/ast/: component.cpp  component.h  entity.cpp  entity.h
src/load/yaml/: vec3.h
src/utils/: CMakeLists.txt  box.h  has_type.h  is_valid.h  resource.h  scoped_directory.cpp  scoped_directory.h  string_view.h  throw_if.h
src/utils/meta/: apply.h  transform.h  typelist.h
test/: CMakeLists.txt  test_boost_version.cpp  test_glfw.cpp  test_glxw.cpp  test_googlemock.cpp  test_googletest.cpp  test_opengl.cpp  test_yamlcpp.cpp
test/ast/: CMakeLists.txt  test_component.cpp
test/component/: CMakeLists.txt  name_fixture.h  parse_fixture.h  test_background.cpp  test_transform.cpp
test/component/utils/: CMakeLists.txt  test_empty_data.cpp  test_for_each.cpp
test/components/: CMakeLists.txt  name_fixture.h  parse_fixture.h  test_background.cpp  test_empty_data.cpp  test_for_each.cpp  test_name.cpp  test_parse.cpp  test_transform.cpp
test/components/utils/: CMakeLists.txt  test_empty_data.cpp  test_for_each.cpp
test/config/: CMakeLists.txt  test_load.cpp  test_parse_error.cpp
test/config/ast/: CMakeLists.txt  test_component.cpp  test_entity.cpp  test_scene.cpp
test/config/yaml/: CMakeLists.txt  test_vec3.cpp
test/game/: CMakeLists.txt  test_component.cpp  test_entity.cpp  test_load.cpp  test_scene.cpp
test/gl/: CMakeLists.txt  mockglfw.cpp  mockglfw.h  mockglxw.cpp  mockglxw.h  test_context.cpp  test_environment.cpp  test_environment_linux.cpp  test_glfw_error.cpp
test/load/: CMakeLists.txt  test_load.cpp
test/load/ast/: CMakeLists.txt  test_component.cpp  test_entity.cpp
test/load/yaml/: CMakeLists.txt  test_vec3.cpp
test/utils/: CMakeLists.txt  test_box.cpp  test_is_valid.cpp  test_resource.cpp  test_scoped_directory.cpp  test_string_view.cpp  test_throw_if.cpp
test/utils/meta/: CMakeLists.txt  test_apply.cpp  test_transform.cpp
